# SS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PROGRESS.md  QUICKSTART.md  README.md  TODO.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.github/workflows/: desktop-build.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: css.d.ts  eslint.config.mjs  i18n.ts  instrumentation.ts  (+6 more)
docs/: 00-vision-and-positioning.md  01-architecture.md  02-modules-design.md  03-roadmap-and-progress.md  04-data-model.md  05-tech-decisions.md  05a-third-party-licenses.md  06-feature-plan-2026H2.md  07-prompt-harness.md  08-ui-optimization-plan.md  09-mobile-ui-redesign-plan-B.md  DEVELOPMENT.md  HOME-SETUP.md  MODULES.md  README.md  SETUP-WINDOWS.md  THEMING.md  W1-W7-followup.md  W2-admin-module-spec.md  W8-status.md
infra/: docker-compose.yml
scripts/: README.md  build-desktop-resources.mjs  config-inspiration-relay.mjs  db-migrate-dev-guard.mjs  db-reset-guard.mjs  debug-moyu-sonnet-vs-gemini.mjs  desktop-bootstrap.mjs  desktop-pack.mjs  desktop-server.mjs  fix-seedance-provider-config.mjs  init-env.mjs  moyu-real-test.mjs  preflight.mjs  relay-batch-test.mjs  relay-real-test.mjs  set-admin-password.ts  start.mjs  test-admin-provider-crud.mjs  test-moyu-jsonmode.mjs  test-moyu-models.mjs  test-moyu-speed.mjs  verify-desktop-flow.mjs  w8-smoke.mjs
(+176 files in other folders)
