[package]
name = "starsalign-desktop"
version = "0.2.0"
description = "StarsAlign Studio Desktop"
authors = ["StarsAlign Studio"]
license = "Private"
repository = "https://github.com/henrywei2030/SS"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Phase 2 Step C:用 libc 给 node sidecar 进程组发 SIGTERM(优雅停 web + 内嵌 pg)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# 默认空,Phase 2 加 GPU sidecar 等 feature
default = []
